--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,4 +8,7 @@ selenium==3.141.0
 six==1.13.0
 urllib3==1.25.7
 Werkzeug==0.16.0
-
+pandas==0.24.2
+beautifulsoup4==4.7.1
+lxml==4.4.1
+requests==2.22.0
