--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,22 @@
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Cors==3.0.8
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lxml==4.4.2
 MarkupSafe==1.1.1
+numpy==1.18.1
+pandas==0.25.3
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.22.0
 selenium==3.141.0
 six==1.13.0
+soupsieve==1.9.5
 urllib3==1.25.7
 Werkzeug==0.16.0
-
